--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.19.3",
-    "@react-native-community/datetimepicker": "^7.6.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.5.0",
@@ -18,22 +18,23 @@
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
+    "postcss": "8.4.23",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-calendar-picker": "^6.1.5",
-    "react-native-gesture-handler": "^2.13.1",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-heroicons": "^3.2.0",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "^13.14.0",
+    "react-native-svg": "13.9.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "3.3.2"
   },
   "private": true
 }
