--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
+    "react-native-url-handler": "^0.4.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
